# test-tauri-app

./: .gitignore  package-lock.json  package.json  tsconfig.json
src/: App.tsx  common.ts  main.tsx  store.ts
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/src/: config_type.rs  main.rs  mongo.rs  pg.rs
src/component/: get_uma_dress.tsx  get_uma_home.tsx  searchUma.tsx  searchUma2.tsx  selectPreset.tsx  snackbar.tsx  useModal.tsx
src/css/: App.css  css1.css  index.css  modal.css  resultArea.css  searchUma.css  searchUma2.css  snackbar.css
src/tables/: chara_name_data.ts  dress_name_data.ts  umamusume.ts
