[package]
name = "test-tauri-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-ask", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postgres = {version = "0.19.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
mongodb = "2.8.1"
thiserror = "1.0.57"
tokio = "1.36.0"
futures = "0.3.30"
readonly = "0.2.12"
bson = "2.9.0"

#derive_more = "0.99.17"
#deadpool-postgres = "0.12.1"
#serde_postgres = "0.2.0"
#postgres-types = {version = "0.2.6", features = ["derive", "with-serde_json-1"] }
#tokio-postgres = "0.7.10"
#chrono = "0.4.34"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
